# SlicerSurvey

./: README.md
QualitativeSurvey/: CMakeLists.txt
QualitativeSurvey/SurveyLoader/: CMakeLists.txt  SurveyLoader.py
QualitativeSurvey/SurveyLoader/Resources/Lib/: SurveyQuestionnaire.py  SurveyUI.py
QualitativeSurvey/SurveyLoader/Resources/SurveyQuestions/example_questionnaire/: bad_question.csv  questions.csv  questions_more_types.csv
QualitativeSurvey/SurveyLoader/Resources/UI/: SurveyLoader.ui  SurveyLoader2.ui
QualitativeSurvey/SurveyLoader/Testing/Python/: SurveyUI_Unit_Test.py
